tests/hevm/fail/redundant/redundant.act
contract A

constructor()

iff

  CALLVALUE == 0

creates

  uint x := 0

transition f()

iff

  CALLVALUE == 0
  x == 1

updates

  x := 2